update select component code

--- a/src/assets/style/ui-style.sass
+++ b/src/assets/style/ui-style.sass
@@ -9,7 +9,7 @@ body
   width: 20rem
   position: relative
   .icon
-    font-size: 1.5rem
+    font-size: 1rem
     position: absolute
     right: 10px
     top: 1px
@@ -51,6 +51,8 @@ body
       overflow: hidden
       text-overflow: ellipsis
       &:hover
+        background-color: #BEE3F8
+      &.active
         background-color: #BEE3F8
 .ui-scroll-root
   &:hover,&:focus
